# hawkeye-shield

./: .env.example  .gitignore  Cargo.toml  README.md
src/: birdeye.rs  config.rs  executor.rs  logger.rs  main.rs  scanner.rs  tui.rs  websocket.rs
