[package]
name = "hawkeye-shield"
version = "0.1.0"
edition = "2021"
description = "Autonomous Solana Trading Agent powered by Birdeye Data API"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-sdk = "2.2"
solana-client = "2.2"
solana-transaction-status = "2.2"
bs58 = "0.5"
base64 = "0.22"
bincode = "1.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
ratatui = "0.26"
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
